# p2p_chat

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  connection.hpp  discovery.hpp  main.cpp  peer_network.hpp  storage.hpp
client-resources/: app.js  index.html  style.css
deb/DEBIAN/: control  postinst  prerm
deb/usr/share/applications/: lan-chat.desktop
scripts/: build_deb.sh  generate_header.py  generate_resources.py
server/: CMakeLists.txt  main.cpp
shared/: message.hpp  protocol.hpp
